Made first edit to resume

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <title>Resume</title>
     </head>
     <body>
-        <h1>This will eventually be my resume</h1>
+        <h1>Matthew J Senese</h1>
+        <hr>
+        <p>815-530-9951 &bull; <a href="matthewjsenese@lewisu.edu"> &bull; Joliet, IL</p>
+        <hr>
+        <h3>HIGHLIGHTS OF QUALIFICATIONS</h3>
+        <hr>
+        <ul>
+            <li>Here will be a list of my qualifications</li>
+        </ul>
     </body>
 </html>
