--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Matthew J Senese</h1>
         <hr>
-        <p>815-530-9951 &bull; <a href="matthewjsenese@lewisu.edu"> &bull; Joliet, IL</p>
+        <p>815-530-9951 &bull; <a href="matthewjsenese@lewisu.edu"> matthewjsenese@lewisu.edu</a> &bull; Joliet, IL</p>
         <hr>
         <h3>HIGHLIGHTS OF QUALIFICATIONS</h3>
         <hr>
