Adjusted CSS file and added resume information

--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
         <title>Resume</title>
     </head>
     <body>
-        <h1>Matthew J Senese</h1>
-        <hr>
-        <p>815-530-9951 &bull; <a href="matthewjsenese@lewisu.edu"> matthewjsenese@lewisu.edu</a> &bull; Joliet, IL</p>
-        <hr>
-        <h3>HIGHLIGHTS OF QUALIFICATIONS</h3>
-        <hr>
-        <ul>
-            <li>Here will be a list of my qualifications</li>
-        </ul>
+        <h1>This will eventually be my resume</h1>
     </body>
 </html>
