--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     -->
     <head>
         <meta charset="UTF=8">
-        <title>Resume</title>
+        <title>Resume: Matthew Senese</title>
     </head>
     <body>
         <h1>Matthew J Senese</h1>
