Adjusted info in resume and added more styling stuff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <head>
         <meta charset="UTF=8">
         <title>Resume: Matthew Senese</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Matthew J Senese</h1>
@@ -41,6 +42,7 @@
         <pre>
             &bull; PC, Mac
         </pre>
+        <p></p>
         <h3>EDUCATION: </h3>
         <hr>
         <pre>
