Added more information to resume

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <h3>HIGHLIGHTS OF QUALIFICATIONS</h3>
         <hr>
         <ul>
-            <li>Here will be a list of my qualifications</li>
+            <li>Organizational and project cooperation skills</li>
+            <li>Problem-solving and critical thinking skills</li>
+            <li>Student-athlete throughout high school and college</li>
         </ul>
         <h3>SUMMARY OF TECHNICAL QUALIFICATIONS</h3>
         <hr>
@@ -50,6 +52,28 @@
             Bachelor of Science in Mathematics          Expected: May 2024
             Lewis University, Romeoville, IL            GPA: 3.98/4.0
         </pre>
+
+        <h3>EXPERIENCE: </h3>
+        <hr>
+        <h5>Stairlift Technician                        Summers 2020-2021</h5>
+        <h6>101 Mobility</h6>
+        <ul>
+            <li>Installed stairlifts, ramps, and VPLs (vertical platform lifts)</li>
+            <li>Repaired and maintained stairlift chassis, seats, and footrests</li>
+        </ul>
+
+        <h3>HONORS AND AWARDS: </h3>
+        <hr>
+        <ul>
+            <li>Dean's List, Lewis University, three semesters</li>
+            <li>Delehanty Gold Award</li>
+        </ul>
+
+        <h3>ACTIVITIES: </h3>
+        <hr>
+        <ul>
+            <li>Member, Lewis University Men's Swimming Team, 2020-Present</li>
+        </ul>
 
     </body>
 </html>
