--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <h3>EXPERIENCE: </h3>
         <hr>
-        <h5>Stairlift Technician                        Summers 2020-2021</h5>
+        <h5>Stairlift Technician &#9; Summers 2020-2021</h5>
         <h6>101 Mobility</h6>
         <ul>
             <li>Installed stairlifts, ramps, and VPLs (vertical platform lifts)</li>
