Validated html and adjusted

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Description: A fitting Resume for later use in life
     -->
     <head>
-        <meta charset="UTF=8">
+        <meta charset="UTF-8">
         <title>Resume: Matthew Senese</title>
         <link rel="stylesheet" href="index.css">
     </head>
@@ -55,7 +55,8 @@
 
         <h3>EXPERIENCE: </h3>
         <hr>
-        <pre><h5>Stairlift Technician        Summers 2020-2021</h5></pre>
+        <h5>Stairlift Technician</h5>
+        <h6>Summers 2020 and 2021</h6>
         <h6>101 Mobility</h6>
         <ul>
             <li>Installed stairlifts, ramps, and VPLs (vertical platform lifts)</li>
